// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poll title (form) should match snapshot (author) 1`] = `
<div
  className="u-align-center"
>
  <input
    className="c-poll-display__input qa-title-input u-margin-half"
    maxLength="100"
    onChange={[Function]}
    placeholder="Untitled"
    value=""
  />
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`poll title (form) should match snapshot (default) 1`] = `
<div
  className="u-align-center"
>
  <input
    className="c-poll-display__input qa-title-input u-margin-half"
    maxLength="100"
    onChange={[Function]}
    placeholder="Untitled"
    value="Title A"
  />
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title (view) should match snapshot (author) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Untitled
  </h3>
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`poll title (view) should match snapshot (default) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Untitled
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title (view) should match snapshot (title) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Title A
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;
